RESOLVED FIXED142137
WebsiteDataStore should handle fetching and deleting local storage data
https://bugs.webkit.org/show_bug.cgi?id=142137
Summary WebsiteDataStore should handle fetching and deleting local storage data
Anders Carlsson
Reported 2015-02-28 14:12:40 PST
WebsiteDataStore should handle fetching and deleting local storage data
Attachments
Patch (6.47 KB, patch)
2015-02-28 14:14 PST, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2015-02-28 14:14:02 PST
WebKit Commit Bot
Comment 2 2015-02-28 14:15:48 PST
Attachment 247614 [details] did not pass style-queue: ERROR: Source/WebKit2/UIProcess/Storage/StorageManager.h:66: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/UIProcess/Storage/StorageManager.cpp:593: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 2 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Anders Carlsson
Comment 3 2015-02-28 14:20:36 PST
Note You need to log in before you can comment on or make changes to this bug.