WebsiteDataStore should handle fetching and deleting local storage data https://bugs.webkit.org/show_bug.cgi?id=142137

Reviewed by Sam Weinig.

* UIProcess/Storage/StorageManager.cpp:
(WebKit::StorageManager::deleteEntriesForOrigins):
Add a new function that deletes entries from multiple origins.

* UIProcess/Storage/StorageManager.h:
Add new members.

* UIProcess/WebsiteData/WebsiteDataStore.cpp:
(WebKit::WebsiteDataStore::fetchData):
Fetch local storage data as well.

(WebKit::WebsiteDataStore::removeData):
Delete local storage data as well.

Canonical link: https://commits.webkit.org/160190@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@180842 268f45cc-cd09-0410-ab3c-d52691b4dbfc