Source/WebKit2/UIProcess/Storage/StorageManager.h
@@ -63,6 +63,7 @@ public:
     void deleteAllEntries();
 
     void deleteLocalStorageOriginsModifiedSince(std::chrono::system_clock::time_point, std::function<void ()> completionHandler);
+    void deleteEntriesForOrigins(const Vector<RefPtr<WebCore::SecurityOrigin>>&, std::function<void ()> completionHandler);
 
 private:
     explicit StorageManager(const String& localStorageDirectory);
